updated lab instructions